--- a/DB/BasicSQLAlchemy.ipynb
+++ b/DB/BasicSQLAlchemy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "81f70028",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "6432108f",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "1ba9705e",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "161edd5e",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "f73d67bf",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "0   2944"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "2b31b150",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
        "[2944 rows x 44 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "id": "acfb6951",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
        "0  216792"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "id": "6b523fdc",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
        "[216792 rows x 372 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,8 +962,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7893fd65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_sql_query('select * from nflplaybyplay', engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "64aedcaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>play_id</th>\n",
+       "      <th>game_id</th>\n",
+       "      <th>old_game_id</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>season_type</th>\n",
+       "      <th>week</th>\n",
+       "      <th>posteam</th>\n",
+       "      <th>posteam_type</th>\n",
+       "      <th>defteam</th>\n",
+       "      <th>...</th>\n",
+       "      <th>out_of_bounds</th>\n",
+       "      <th>home_opening_kickoff</th>\n",
+       "      <th>qb_epa</th>\n",
+       "      <th>xyac_epa</th>\n",
+       "      <th>xyac_mean_yardage</th>\n",
+       "      <th>xyac_median_yardage</th>\n",
+       "      <th>xyac_success</th>\n",
+       "      <th>xyac_fd</th>\n",
+       "      <th>xpass</th>\n",
+       "      <th>pass_oe</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2020_01_ARI_SF</td>\n",
+       "      <td>2020091311</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>39</td>\n",
+       "      <td>2020_01_ARI_SF</td>\n",
+       "      <td>2020091311</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>home</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>54</td>\n",
+       "      <td>2020_01_ARI_SF</td>\n",
+       "      <td>2020091311</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>home</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.294838</td>\n",
+       "      <td>0.50337</td>\n",
+       "      <td>4.275047</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.619306</td>\n",
+       "      <td>0.239695</td>\n",
+       "      <td>0.515058</td>\n",
+       "      <td>48.494154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>93</td>\n",
+       "      <td>2020_01_ARI_SF</td>\n",
+       "      <td>2020091311</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>home</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.857214</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.413357</td>\n",
+       "      <td>-41.335732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>118</td>\n",
+       "      <td>2020_01_ARI_SF</td>\n",
+       "      <td>2020091311</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>home</td>\n",
+       "      <td>ARI</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-0.454665</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.446920</td>\n",
+       "      <td>-44.692025</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 372 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  play_id         game_id old_game_id home_team away_team season_type  week  \\\n",
+       "0       1  2020_01_ARI_SF  2020091311        SF       ARI         REG   1.0   \n",
+       "1      39  2020_01_ARI_SF  2020091311        SF       ARI         REG   1.0   \n",
+       "2      54  2020_01_ARI_SF  2020091311        SF       ARI         REG   1.0   \n",
+       "3      93  2020_01_ARI_SF  2020091311        SF       ARI         REG   1.0   \n",
+       "4     118  2020_01_ARI_SF  2020091311        SF       ARI         REG   1.0   \n",
+       "\n",
+       "  posteam posteam_type defteam  ... out_of_bounds  home_opening_kickoff  \\\n",
+       "0    None         None    None  ...           0.0                   1.0   \n",
+       "1      SF         home     ARI  ...           0.0                   1.0   \n",
+       "2      SF         home     ARI  ...           0.0                   1.0   \n",
+       "3      SF         home     ARI  ...           0.0                   1.0   \n",
+       "4      SF         home     ARI  ...           0.0                   1.0   \n",
+       "\n",
+       "     qb_epa  xyac_epa  xyac_mean_yardage  xyac_median_yardage xyac_success  \\\n",
+       "0       NaN       NaN                NaN                  NaN          NaN   \n",
+       "1  0.000000       NaN                NaN                  NaN          NaN   \n",
+       "2  1.294838   0.50337           4.275047                  2.0     0.619306   \n",
+       "3  0.857214       NaN                NaN                  NaN          NaN   \n",
+       "4 -0.454665       NaN                NaN                  NaN          NaN   \n",
+       "\n",
+       "    xyac_fd     xpass    pass_oe  \n",
+       "0       NaN       NaN        NaN  \n",
+       "1       NaN       NaN        NaN  \n",
+       "2  0.239695  0.515058  48.494154  \n",
+       "3       NaN  0.413357 -41.335732  \n",
+       "4       NaN  0.446920 -44.692025  \n",
+       "\n",
+       "[5 rows x 372 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72332976",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -985,7 +1212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
